redmine-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  labels:
    io.kompose.service: redmine3
  name: redmine3
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 (f3d54d784)
      labels:
        io.kompose.service: redmine3
    spec:
      containers:
        image: redmine:4.1.1-alpine
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "328Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /account/register
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /account/register
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 15
        volumeMounts:
        - mountPath: /usr/src/redmine/files
          name: redmine-persistent-storage
      restartPolicy: Always
      volumes:
      - name: redmine-persistent-storage
        persistentVolumeClaim:
         claimName: nfs
status: {}
