redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true)'
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  labels:
    io.kompose.service: redmine3
  name: redmine3
spec:
  type: NodePort
  ports:
  - name: redmine3
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    io.kompose.service: redmine3
statys:
  loadBalancer: {}
